--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@capacitor/android": "^4.7.0",
+    "@capacitor/core": "4.7.0",
     "@ionic/angular": "^6.1.9",
     "ionicons": "^6.0.3",
     "ngx-cookie-service": "^15.0.0",
@@ -37,6 +39,7 @@
     "@angular/compiler": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
+    "@capacitor/cli": "4.7.0",
     "@ionic/angular-toolkit": "^8.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
